tests/snapshots/snapshots__budget_dotenv_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 650 → level 3 (623 words)

CHANGELOG.md
     1→# Changelog
     5→## [Unreleased](https://github.com/motdotla/dotenv/compare/v17.3.1...master)
     7→## [17.3.1](https://github.com/motdotla/dotenv/compare/v17.3.0...v17.3.1) (2026-02-12)
     9→### Changed
    13→## [17.3.0](https://github.com/motdotla/dotenv/compare/v17.2.4...v17.3.0) (2026-02-12)
    15→### Added
    19→### Changed
    23→## [17.2.4](https://github.com/motdotla/dotenv/compare/v17.2.3...v17.2.4) (2026-02-05)
    25→### Changed
    30→## [17.2.3](https://github.com/motdotla/dotenv/compare/v17.2.2...v17.2.3) (2025-09-29)
    32→### Changed
    36→## [17.2.2](https://github.com/motdotla/dotenv/compare/v17.2.1...v17.2.2) (2025-09-02)
    38→### Added
    42→## [17.2.1](https://github.com/motdotla/dotenv/compare/v17.2.0...v17.2.1) (2025-07-24)
    44→### Changed
    48→## [17.2.0](https://github.com/motdotla/dotenv/compare/v17.1.0...v17.2.0) (2025-07-09)
    50→### Added
    74→## [17.1.0](https://github.com/motdotla/dotenv/compare/v17.0.1...v17.1.0) (2025-07-07)
    76→### Added
    96→## [17.0.1](https://github.com/motdotla/dotenv/compare/v17.0.0...v17.0.1) (2025-07-01)
    98→### Changed
   102→## [17.0.0](https://github.com/motdotla/dotenv/compare/v16.6.1...v17.0.0) (2025-06-27)
   104→### Changed
   108→## [16.6.1](https://github.com/motdotla/dotenv/compare/v16.6.0...v16.6.1) (2025-06-27)
   110→### Changed
   116→## [16.6.0](https://github.com/motdotla/dotenv/compare/v16.5.0...v16.6.0) (2025-06-26)
   118→### Added
   124→## [16.5.0](https://github.com/motdotla/dotenv/compare/v16.4.7...v16.5.0) (2025-04-07)
   126→### Added
   136→### Changed
   140→## [16.4.7](https://github.com/motdotla/dotenv/compare/v16.4.6...v16.4.7) (2024-12-03)
   142→### Changed
   146→## [16.4.6](https://github.com/motdotla/dotenv/compare/v16.4.5...v16.4.6) (2024-12-02)
   148→### Changed
   153→## [16.4.5](https://github.com/motdotla/dotenv/compare/v16.4.4...v16.4.5) (2024-02-19)
   155→### Changed
   159→## [16.4.4](https://github.com/motdotla/dotenv/compare/v16.4.3...v16.4.4) (2024-02-13)
   161→### Changed
   165→## [16.4.3](https://github.com/motdotla/dotenv/compare/v16.4.2...v16.4.3) (2024-02-12)
   167→### Changed
   171→## [16.4.2](https://github.com/motdotla/dotenv/compare/v16.4.1...v16.4.2) (2024-02-10)
   173→### Changed
   177→## [16.4.1](https://github.com/motdotla/dotenv/compare/v16.4.0...v16.4.1) (2024-01-24)
   181→## [16.4.0](https://github.com/motdotla/dotenv/compare/v16.3.2...v16.4.0) (2024-01-23)
   186→## [16.3.2](https://github.com/motdotla/dotenv/compare/v16.3.1...v16.3.2) (2024-01-18)
   188→### Added
   192→### Changed
   197→## [16.3.1](https://github.com/motdotla/dotenv/compare/v16.3.0...v16.3.1) (2023-06-17)
   199→### Added
   203→## [16.3.0](https://github.com/motdotla/dotenv/compare/v16.2.0...v16.3.0) (2023-06-16)
   205→### Added
   209→## [16.2.0](https://github.com/motdotla/dotenv/compare/v16.1.4...v16.2.0) (2023-06-15)
   211→### Added
   216→## [16.1.4](https://github.com/motdotla/dotenv/compare/v16.1.3...v16.1.4) (2023-06-04)
   218→### Added
   222→## [16.1.3](https://github.com/motdotla/dotenv/compare/v16.1.2...v16.1.3) (2023-05-31)
   224→### Removed
   228→## [16.1.2](https://github.com/motdotla/dotenv/compare/v16.1.1...v16.1.2) (2023-05-31)
   230→### Changed
   234→## [16.1.1](https://github.com/motdotla/dotenv/compare/v16.1.0...v16.1.1) (2023-05-30)
   236→### Added
   240→### Changed
   244→## [16.1.0](https://github.com/motdotla/dotenv/compare/v16.0.3...v16.1.0) (2023-05-30)
   246→### Added
   256→### Changed
   260→## [16.0.3](https://github.com/motdotla/dotenv/compare/v16.0.2...v16.0.3) (2022-09-29)
   262→### Changed
   266→## [16.0.2](https://github.com/motdotla/dotenv/compare/v16.0.1...v16.0.2) (2022-08-30)
   268→### Added
   272→## [16.0.1](https://github.com/motdotla/dotenv/compare/v16.0.0...v16.0.1) (2022-05-10)
   274→### Changed
   279→## [16.0.0](https://github.com/motdotla/dotenv/compare/v15.0.1...v16.0.0) (2022-02-02)
   281→### Added
   287→## [15.0.1](https://github.com/motdotla/dotenv/compare/v15.0.0...v15.0.1) (2022-02-02)
   289→### Changed
   293→## [15.0.0](https://github.com/motdotla/dotenv/compare/v14.3.2...v15.0.0) (2022-01-31)
   297→### Added
   301→### Changed
   307→### Removed
   311→## [14.3.2](https://github.com/motdotla/dotenv/compare/v14.3.1...v14.3.2) (2022-01-25)
   313→### Changed
   317→## [14.3.1](https://github.com/motdotla/dotenv/compare/v14.3.0...v14.3.1) (2022-01-25)
   319→### Changed
   323→## [14.3.0](https://github.com/motdotla/dotenv/compare/v14.2.0...v14.3.0) (2022-01-24)
   325→### Added
   329→## [14.2.0](https://github.com/motdotla/dotenv/compare/v14.1.1...v14.2.0) (2022-01-17)
   331→### Added
   336→## [14.1.1](https://github.com/motdotla/dotenv/compare/v14.1.0...v14.1.1) (2022-01-17)
   338→### Added
   342→## [14.1.0](https://github.com/motdotla/dotenv/compare/v14.0.1...v14.1.0) (2022-01-17)
   344→### Added
   348→## [14.0.1](https://github.com/motdotla/dotenv/compare/v14.0.0...v14.0.1) (2022-01-16)
   350→### Added
   354→## [14.0.0](https://github.com/motdotla/dotenv/compare/v13.0.1...v14.0.0) (2022-01-16)
   356→### Added
   360→## [13.0.1](https://github.com/motdotla/dotenv/compare/v13.0.0...v13.0.1) (2022-01-16)
   362→### Changed
   366→## [13.0.0](https://github.com/motdotla/dotenv/compare/v12.0.4...v13.0.0) (2022-01-16)
   368→### Added
   372→## [12.0.4](https://github.com/motdotla/dotenv/compare/v12.0.3...v12.0.4) (2022-01-16)
   374→### Changed
   379→## [12.0.3](https://github.com/motdotla/dotenv/compare/v12.0.2...v12.0.3) (2022-01-15)
   381→### Changed
   385→## [12.0.2](https://github.com/motdotla/dotenv/compare/v12.0.1...v12.0.2) (2022-01-15)
   387→### Changed
   391→## [12.0.1](https://github.com/motdotla/dotenv/compare/v12.0.0...v12.0.1) (2022-01-15)
   393→### Changed
   397→## [12.0.0](https://github.com/motdotla/dotenv/compare/v11.0.0...v12.0.0) (2022-01-15)
   399→### Removed
   403→### Changed
   409→## [11.0.0](https://github.com/motdotla/dotenv/compare/v10.0.0...v11.0.0) (2022-01-11)
   411→### Changed
   416→## [10.0.0](https://github.com/motdotla/dotenv/compare/v9.0.2...v10.0.0) (2021-05-20)
   418→### Added
   424→## [9.0.2](https://github.com/motdotla/dotenv/compare/v9.0.1...v9.0.2) (2021-05-10)
   426→### Changed
   430→## [9.0.1](https://github.com/motdotla/dotenv/compare/v9.0.0...v9.0.1) (2021-05-08)
   432→### Changed
   436→## [9.0.0](https://github.com/motdotla/dotenv/compare/v8.6.0...v9.0.0) (2021-05-05)
   438→### Changed
   442→## [8.6.0](https://github.com/motdotla/dotenv/compare/v8.5.1...v8.6.0) (2021-05-05)
   444→### Added
   448→## [8.5.1](https://github.com/motdotla/dotenv/compare/v8.5.0...v8.5.1) (2021-05-05)
   450→### Changed
   454→## [8.5.0](https://github.com/motdotla/dotenv/compare/v8.4.0...v8.5.0) (2021-05-05)
   456→### Added
   460→## [8.4.0](https://github.com/motdotla/dotenv/compare/v8.3.0...v8.4.0) (2021-05-05)
   462→### Changed
   466→## [8.3.0](https://github.com/motdotla/dotenv/compare/v8.2.0...v8.3.0) (2021-05-05)
   468→### Changed
   472→## [8.2.0](https://github.com/motdotla/dotenv/compare/v8.1.0...v8.2.0) (2019-10-16)
   474→### Added
   478→## [8.1.0](https://github.com/motdotla/dotenv/compare/v8.0.0...v8.1.0) (2019-08-18)
   480→### Changed
   484→# [8.0.0](https://github.com/motdotla/dotenv/compare/v7.0.0...v8.0.0) (2019-05-02)
   486→### Changed
   490→## [7.0.0] - 2019-03-12
   492→### Fixed
   496→### Removed
   500→## [6.2.0] - 2018-12-03
   502→### Added
   506→## [6.1.0] - 2018-10-08
   508→### Added
   512→## [6.0.0] - 2018-06-02
   514→### Changed
   518→## [5.0.0] - 2018-01-29
   520→### Added
   526→### Changed
   532→### Removed
   536→## [4.0.0] - 2016-12-23
   538→### Changed
   542→### Removed
   546→## [3.0.0] - 2016-12-20
   548→### Added
   554→### Changed
   559→### Fixed
   563→### Removed
   567→## [2.0.0] - 2016-01-20
   569→### Added
   577→### Changed
   581→### Removed
   585→## [1.2.0] - 2015-06-20
   587→### Added
   591→### Changed
   595→### Fixed
   599→## [1.1.0] - 2015-03-31
   601→### Added
   605→## [1.0.0] - 2015-03-13
   607→### Removed
CONTRIBUTING.md
     1→# Contributing
    11→## Testing
    19→## Code Style
README-es.md
     1→# dotenv [![NPM version](https://img.shields.io/npm/v/dotenv.svg?style=flat-square)](https://www.npmjs.com/package/dotenv) [![downloads](https://img.shields.io/npm/dw/dotenv)](https://www.npmjs.com/package/dotenv)
    11→## Usage
    39→## Advanced
   319→## Agentes
   331→### Inicio rápido
   357→## FAQ
   579→## Docs
   587→### Config
   605→#### Options
   607→##### path
   625→##### quiet
   648→##### encoding
   658→##### debug
   668→##### override
   678→##### processEnv
   692→### Parse
   705→#### Options
   707→##### debug
   721→### Populate
   748→#### options
   750→##### Debug
   756→##### override
   764→## CHANGELOG
   770→## Who's using dotenv?
README.md
     1→# dotenv [![NPM version](https://img.shields.io/npm/v/dotenv.svg?style=flat-square)](https://www.npmjs.com/package/dotenv) [![downloads](https://img.shields.io/npm/dw/dotenv)](https://www.npmjs.com/package/dotenv)
    11→## Usage
    39→## Advanced
   319→## Agents
   331→### Quickstart
   357→## FAQ
   579→## Docs
   587→### Config
   605→#### Options
   607→##### path
   625→##### quiet
   648→##### encoding
   658→##### debug
   668→##### override
   678→##### processEnv
   692→### Parse
   705→#### Options
   707→##### debug
   721→### Populate
   748→#### options
   750→##### Debug
   756→##### override
   764→## CHANGELOG
   770→## Who's using dotenv?
SECURITY.md
config.d.ts
config.js
lib/cli-options.js
     1→const re
lib/env-options.js
     2→const options
lib/main.d.ts
     5→export interface DotenvParseOutput {
     9→export interface DotenvPopulateOutput {
    25→export interface DotenvConfigOptions {
    92→export interface DotenvConfigOutput {
    97→type DotenvError
   106→export interface DotenvPopulateOptions {
   126→export interface DotenvPopulateInput {
lib/main.js
     7→const version
    10→const TIPS
    27→function _getRandomTip
    31→function parseBoolean
    38→function supportsAnsi
    42→function dim
    46→const LINE
    49→function parse
    87→function _parseVault
   130→function _warn
   134→function _debug
   138→function _log
   142→function _dotenvKey
   157→function _instructions
   200→function _vaultPath
   224→function _resolveHome
   228→function _configVault
   248→function configDotenv
   328→function config
   346→function decrypt
   378→function populate
   413→const DotenvModule
