tests/snapshots/snapshots__budget_either_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2000 tokens)

Cargo.toml
     1→[package]
    20→[dependencies]
    23→[features]
    28→[dev-dependencies]
    31→[package.metadata.release]
    36→[package.metadata.docs.rs]
    39→[package.metadata.playground]

src/into_either.rs
     4→use super::{Either, Left, Right};
     6→/// Provides methods for converting a type `Self` into either a [`Left`] or [`Right`]
     7→/// variant of [`Either<Self, Self>`](Either).
     8→///
     9→/// The [`into_either`](IntoEither::into_either) method takes a [`bool`] to determine
    10→/// whether to convert to [`Left`] or [`Right`].
    11→///
    12→/// The [`into_either_with`](IntoEither::into_either_with) method takes a
    13→/// [predicate function](FnOnce) to determine whether to convert to [`Left`] or [`Right`].
    14→pub trait IntoEither: Sized {
    15→    /// Converts `self` into a [`Left`] variant of [`Either<Self, Self>`](Either)
    16→    /// if `into_left` is `true`.
    17→    /// Converts `self` into a [`Right`] variant of [`Either<Self, Self>`](Either)
    18→    /// otherwise.
    19→    ///
    20→    /// # Examples
    21→    ///
    22→    /// ```
    23→    /// use either::{IntoEither, Left, Right};
    24→    ///
    25→    /// let x = 0;
    26→    /// assert_eq!(x.into_either(true), Left(x));
    27→    /// assert_eq!(x.into_either(false), Right(x));
    28→    /// ```
    29→    fn into_either(self, into_left: bool) -> Either<Self, Self> {
    30→        if into_left {
    31→            Left(self)
    32→        } else {
    33→            Right(self)
    34→        }
    35→    }
    37→    /// Converts `self` into a [`Left`] variant of [`Either<Self, Self>`](Either)
    38→    /// if `into_left(&self)` returns `true`.
    39→    /// Converts `self` into a [`Right`] variant of [`Either<Self, Self>`](Either)
    40→    /// otherwise.
    41→    ///
    42→    /// # Examples
    43→    ///
    44→    /// ```
    45→    /// use either::{IntoEither, Left, Right};
    46→    ///
    47→    /// fn is_even(x: &u8) -> bool {
    48→    ///     x % 2 == 0
    49→    /// }
    50→    ///
    51→    /// let x = 0;
    52→    /// assert_eq!(x.into_either_with(is_even), Left(x));
    53→    /// assert_eq!(x.into_either_with(|x| !is_even(x)), Right(x));
    54→    /// ```
    55→    fn into_either_with<F>(self, into_left: F) -> Either<Self, Self>
    56→    where
    57→        F: FnOnce(&Self) -> bool,
    58→    {
    59→        let into_left = into_left(&self);
    60→        self.into_either(into_left)
    61→    }
    64→impl<T> IntoEither for T {}

src/iterator.rs
     1→use super::{for_both, Either, Left, Right};
     2→use core::iter;
     4→macro_rules! wrap_either {
    13→/// Iterator that maps left or right iterators to corresponding `Either`-wrapped items.
    14→///
    15→/// This struct is created by the [`Either::factor_into_iter`],
    16→/// [`factor_iter`][Either::factor_iter],
    17→/// and [`factor_iter_mut`][Either::factor_iter_mut] methods.
    18→#[derive(Clone, Debug)]
    19→pub struct IterEither<L, R> {
    20→    inner: Either<L, R>,
    21→}
    24→    pub(crate) fn new(inner: Either<L, R>) -> Self {
    43→impl<L, R> Iterator for Either<L, R>
    44→where
    45→    L: Iterator,
    46→    R: Iterator<Item = L::Item>,
    47→{
    48→    type Item = L::Item;
   185→    type Item = Either<L::Item, R::Item>;

src/lib.rs
    21→#[cfg(feature = "serde")]
    22→pub mod serde_untagged;
    24→#[cfg(feature = "serde")]
    25→pub mod serde_untagged_optional;
    27→use core::convert::{AsMut, AsRef};
    28→use core::fmt;
    29→use core::future::Future;
    30→use core::ops::Deref;
    31→use core::ops::DerefMut;
    32→use core::pin::Pin;
    35→use std::error::Error;
    37→use std::io::{self, BufRead, Read, Seek, SeekFrom, Write};
    39→pub use crate::Either::{Left, Right};
    41→/// The enum `Either` with variants `Left` and `Right` is a general purpose
    42→/// sum type with two cases.
    43→///
    44→/// The `Either` type is symmetric and treats its variants the same way, without
    45→/// preference.
    46→/// (For representing success or error, use the regular `Result` enum instead.)
    47→#[cfg_attr(feature = "serde", derive(serde::Serialize, serde::Deserialize))]
    48→#[derive(Copy, PartialEq, Eq, PartialOrd, Ord, Hash, Debug)]
    49→pub enum Either<L, R> {
    50→    /// A value of type `L`.
    51→    Left(L),
    52→    /// A value of type `R`.
    53→    Right(R),
    54→}
    81→macro_rules! for_both {
   113→macro_rules! try_left {
   124→macro_rules! try_right {
   133→macro_rules! map_either {
   142→mod iterator;
   143→pub use self::iterator::IterEither;
   145→mod into_either;
   146→pub use self::into_either::IntoEither;
  1143→    type Output = L::Output;
  1253→macro_rules! impl_specific_ref_and_mut {
  1327→    type Target = L::Target;
  1522→macro_rules! check_t {
  1536→fn _unsized_ref_propagation() {
  1552→#[cfg(feature = "std")]
  1553→fn _unsized_std_propagation() {

src/serde_untagged.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}
    45→pub fn serialize<L, R, S>(this: &super::Either<L, R>, serializer: S) -> Result<S::Ok, S::Error>
    46→where
    47→    S: Serializer,
    48→    L: Serialize,
    49→    R: Serialize,
    50→{
    51→    let untagged = match this {
    52→        super::Either::Left(left) => Either::Left(left),
      →        …
    58→pub fn deserialize<'de, L, R, D>(deserializer: D) -> Result<super::Either<L, R>, D::Error>
    59→where
    60→    D: Deserializer<'de>,
    61→    L: Deserialize<'de>,
    62→    R: Deserialize<'de>,
    63→{
    64→    match Either::deserialize(deserializer) {
    65→        Ok(Either::Left(left)) => Ok(super::Either::Left(left)),
      →        …

src/serde_untagged_optional.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    38→#[derive(Serialize, Deserialize)]
      →…
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}
    45→pub fn serialize …
    62→pub fn deserialize …
