tests/snapshots/snapshots__budget_either_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (3990 tokens)

Cargo.toml
     1→[package …
    20→[dependencies …
    23→[features …
    28→[dev-dependencies …
    31→[package.metadata.release …
    36→[package.metadata.docs.rs …
    39→[package.metadata.playground …

src/into_either.rs
     4→use super::{Either, Left, Right};
     6→/// Provides methods for converting a type `Self` into either a [`Left`] or [`Right`]
     7→/// variant of [`Either<Self, Self>`](Either).
     8→///
     9→/// The [`into_either`](IntoEither::into_either) method takes a [`bool`] to determine
    10→/// whether to convert to [`Left`] or [`Right`].
    11→///
    12→/// The [`into_either_with`](IntoEither::into_either_with) method takes a
    13→/// [predicate function](FnOnce) to determine whether to convert to [`Left`] or [`Right`].
    14→pub trait IntoEither: Sized {
    29→    fn into_either …
    55→    fn into_either_with …

src/iterator.rs
     1→use super::{for_both, Either, Left, Right};
     2→use core::iter;
     4→macro_rules! wrap_either {
     5→    ($value:expr => $( $tail:tt )*) => {
     6→        match $value {
      →…
    13→/// Iterator that maps left or right iterators to corresponding `Either`-wrapped items.
    14→///
    15→/// This struct is created by the [`Either::factor_into_iter`],
    16→/// [`factor_iter`][Either::factor_iter],
    17→/// and [`factor_iter_mut`][Either::factor_iter_mut] methods.
    18→#[derive(Clone, Debug)]
    19→pub struct IterEither<L, R> {
    20→    inner: Either<L, R>,
    21→}
    24→    pub(crate) fn new(inner: Either<L, R>) -> Self {
    25→        IterEither { inner }
    26→    }
    34→    fn extend …
    42→/// `Either<L, R>` is an iterator if both `L` and `R` are iterators.
    43→impl<L, R> Iterator for Either<L, R>
    44→where
    45→    L: Iterator,
    46→    R: Iterator<Item = L::Item>,
    47→{
    48→    type Item = L::Item;
    50→    fn next …
    54→    fn size_hint …
    58→    fn fold …
    65→    fn for_each …
    72→    fn count …
    76→    fn last …
    80→    fn nth …
    84→    fn collect …
    91→    fn partition …
    99→    fn all …
   106→    fn any …
   113→    fn find …
   120→    fn find_map …
   127→    fn position …
   140→    fn next_back …
   144→    fn nth_back …
   148→    fn rfold …
   155→    fn rfind …
   168→    fn len …
   185→    type Item = Either<L::Item, R::Item>;
   187→    fn next …
   191→    fn size_hint …
   195→    fn fold …
   202→    fn for_each …
   209→    fn count …
   213→    fn last …
   217→    fn nth …
   221→    fn collect …
   228→    fn partition …
   236→    fn all …
   243→    fn any …
   250→    fn find …
   257→    fn find_map …
   264→    fn position …
   277→    fn next_back …
   281→    fn nth_back …
   285→    fn rfold …
   292→    fn rfind …
   305→    fn len …

src/lib.rs
    21→#[cfg(feature = "serde")]
    22→pub mod serde_untagged;
    24→#[cfg(feature = "serde")]
    25→pub mod serde_untagged_optional;
    27→use core::convert::{AsMut, AsRef};
    28→use core::fmt;
    29→use core::future::Future;
    30→use core::ops::Deref;
    31→use core::ops::DerefMut;
    32→use core::pin::Pin;
    35→use std::error::Error;
    37→use std::io::{self, BufRead, Read, Seek, SeekFrom, Write};
    39→pub use crate::Either::{Left, Right};
    41→/// The enum `Either` with variants `Left` and `Right` is a general purpose
    42→/// sum type with two cases.
    43→///
    44→/// The `Either` type is symmetric and treats its variants the same way, without
    45→/// preference.
    46→/// (For representing success or error, use the regular `Result` enum instead.)
    47→#[cfg_attr(feature = "serde", derive(serde::Serialize, serde::Deserialize))]
    48→#[derive(Copy, PartialEq, Eq, PartialOrd, Ord, Hash, Debug)]
    49→pub enum Either<L, R> {
    50→    /// A value of type `L`.
    51→    Left(L),
    52→    /// A value of type `R`.
    53→    Right(R),
    54→}
    56→/// Evaluate the provided expression for both [`Either::Left`] and [`Either::Right`].
    57→///
    58→/// This macro is useful in cases where both sides of [`Either`] can be interacted with
    59→/// in the same way even though the don't share the same type.
    60→///
    61→/// Syntax: `either::for_both!(` *expression* `,` *pattern* `=>` *expression* `)`
    62→///
    63→/// # Example
    64→///
    65→/// ```
    66→/// use either::Either;
    67→///
    68→/// fn length(owned_or_borrowed: Either<String, &'static str>) -> usize {
    69→///     either::for_both!(owned_or_borrowed, s => s.len())
    70→/// }
    71→///
    72→/// fn main() {
    73→///     let borrowed = Either::Right("Hello world!");
    74→///     let owned = Either::Left("Hello world!".to_owned());
    75→///
    76→///     assert_eq!(length(borrowed), 12);
    77→///     assert_eq!(length(owned), 12);
    78→/// }
    79→/// ```
    80→#[macro_export]
    81→macro_rules! for_both {
    82→    ($value:expr, $pattern:pat => $result:expr) => {
    83→        match $value {
      →…
    90→/// Macro for unwrapping the left side of an [`Either`], which fails early
    91→/// with the opposite side. Can only be used in functions that return
    92→/// `Either` because of the early return of `Right` that it provides.
    93→///
    94→/// See also [`try_right!`] for its dual, which applies the same just to the
    95→/// right side.
    96→///
    97→/// # Example
    98→///
    99→/// ```
   100→/// use either::{Either, Left, Right};
   101→///
   102→/// fn twice(wrapper: Either<u32, &str>) -> Either<u32, &str> {
   103→///     let value = either::try_left!(wrapper);
   104→///     Left(value * 2)
   105→/// }
   106→///
   107→/// fn main() {
   108→///     assert_eq!(twice(Left(2)), Left(4));
   109→///     assert_eq!(twice(Right("ups")), Right("ups"));
   110→/// }
   111→/// ```
   112→#[macro_export]
   113→macro_rules! try_left {
   114→    ($expr:expr) => {
   115→        match $expr {
      →…
   122→/// Dual to [`try_left!`], see its documentation for more information.
   123→#[macro_export]
   124→macro_rules! try_right {
   125→    ($expr:expr) => {
   126→        match $expr {
      →…
   133→macro_rules! map_either {
   134→    ($value:expr, $pattern:pat => $result:expr) => {
   135→        match $value {
      →…
   142→mod iterator;
   143→pub use self::iterator::IterEither;
   145→mod into_either;
   146→pub use self::into_either::IntoEither;
   149→    fn clone …
   156→    fn clone_from …
   175→    pub fn is_left …
   191→    pub fn is_right …
   206→    pub fn left …
   224→    pub fn right …
   242→    pub fn as_ref …
   264→    pub fn as_mut …
   270→    pub fn as_pin_ref …
   278→    pub fn as_pin_mut …
   298→    pub fn flip …
   317→    pub fn map_left …
   339→    pub fn map_right …
   366→    pub fn map_either …
   397→    pub fn map_either_with …
   424→    pub fn either …
   454→    pub fn either_with …
   476→    pub fn left_and_then …
   497→    pub fn right_and_then …
   521→    pub fn into_iter …
   544→    pub fn iter …
   573→    pub fn iter_mut …
   597→    pub fn factor_into_iter …
   619→    pub fn factor_iter …
   645→    pub fn factor_iter_mut …
   671→    pub fn left_or …
   690→    pub fn left_or_default …
   712→    pub fn left_or_else …
   738→    pub fn right_or …
   757→    pub fn right_or_default …
   779→    pub fn right_or_else …
   809→    pub fn unwrap_left …
   841→    pub fn unwrap_right …
   871→    pub fn expect_left …
   901→    pub fn expect_right …
   923→    pub fn either_into …
   944→    pub fn factor_none …
   966→    pub fn factor_err …
   988→    pub fn factor_ok …
  1009→    pub fn factor_first …
  1030→    pub fn factor_second …
  1050→    pub fn into_inner …
  1065→    pub fn map …
  1076→    pub fn cloned …
  1086→    pub fn copied …
  1098→    pub fn cloned …
  1108→    pub fn copied …
  1117→/// Convert from `Result` to `Either` with `Ok => Right` and `Err => Left`.
  1118→impl<L, R> From<Result<R, L>> for Either<L, R> {
  1119→    fn from …
  1127→/// Convert from `Either` to `Result` with `Right => Ok` and `Left => Err`.
  1128→impl<L, R> From<Either<L, R>> for Result<R, L> {
  1129→    fn from …
  1137→/// `Either<L, R>` is a future if both `L` and `R` are futures.
  1138→impl<L, R> Future for Either<L, R>
  1139→where
  1140→    L: Future,
  1141→    R: Future<Output = L::Output>,
  1142→{
  1143→    type Output = L::Output;
  1145→    fn poll …
  1154→/// `Either<L, R>` implements `Read` if both `L` and `R` do.
  1155→///
  1156→/// Requires crate feature `"std"`
  1157→impl<L, R> Read for Either<L, R>
  1158→where
  1159→    L: Read,
  1160→    R: Read,
  1161→{
  1162→    fn read …
  1166→    fn read_exact …
  1170→    fn read_to_end …
  1174→    fn read_to_string …
  1180→/// `Either<L, R>` implements `Seek` if both `L` and `R` do.
  1181→///
  1182→/// Requires crate feature `"std"`
  1183→impl<L, R> Seek for Either<L, R>
  1184→where
  1185→    L: Seek,
  1186→    R: Seek,
  1187→{
  1188→    fn seek …
  1194→/// Requires crate feature `"std"`
  1195→impl<L, R> BufRead for Either<L, R>
  1196→where
  1197→    L: BufRead,
  1198→    R: BufRead,
  1199→{
  1200→    fn fill_buf …
  1204→    fn consume …
  1208→    fn read_until …
  1212→    fn read_line …
  1218→/// `Either<L, R>` implements `Write` if both `L` and `R` do.
  1219→///
  1220→/// Requires crate feature `"std"`
  1221→impl<L, R> Write for Either<L, R>
  1222→where
  1223→    L: Write,
  1224→    R: Write,
  1225→{
  1226→    fn write …
  1230→    fn write_all …
  1234→    fn write_fmt …
  1238→    fn flush …
  1248→    fn as_ref …
  1253→macro_rules! impl_specific_ref_and_mut {
  1254→    ($t:ty, $($attr:meta),* ) => {
  1255→        $(#[$attr])*
      →…
  1297→    fn as_ref …
  1307→    fn as_mut …
  1317→    fn as_mut …
  1327→    type Target = L::Target;
  1329→    fn deref …
  1339→    fn deref_mut …
  1345→/// `Either` implements `Error` if *both* `L` and `R` implement it.
  1346→///
  1347→/// Requires crate feature `"std"`
  1348→impl<L, R> Error for Either<L, R>
  1349→where
  1350→    L: Error,
  1351→    R: Error,
  1352→{
  1353→    fn source …
  1358→    fn description …
  1363→    fn cause …
  1373→    fn fmt …
  1383→    fn write_str …
  1387→    fn write_char …
  1391→    fn write_fmt …
  1521→/// A helper macro to check if AsRef and AsMut are implemented for a given type.
  1522→macro_rules! check_t {
  1523→    ($t:ty) => {{
  1524→        fn check_ref<T: AsRef<$t>>() {}
      →…
  1536→fn _unsized_ref_propagation() {
  1537→    check_t!(str);
  1538→
  1539→    fn check_array_ref<T: AsRef<[Item]>, Item>() {}
  1540→    fn check_array_mut<T: AsMut<[Item]>, Item>() {}
  1541→
      →…
  1552→#[cfg(feature = "std")]
  1553→fn _unsized_std_propagation() {
  1554→    check_t!(::std::path::Path);
  1555→    check_t!(::std::ffi::OsStr);
  1556→    check_t!(::std::ffi::CStr);
  1557→}

src/serde_untagged.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    38→#[derive(serde::Serialize, serde::Deserialize)]
    39→#[serde(untagged)]
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}
    45→pub fn serialize …
    58→pub fn deserialize …

src/serde_untagged_optional.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    38→#[derive(Serialize, Deserialize)]
    39→#[serde(untagged)]
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}
    45→pub fn serialize …
    62→pub fn deserialize …
