tests/snapshots/snapshots__budget_either_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (476 words)

Cargo.toml
     1→[package …
    20→[dependencies …
    23→[features …
    28→[dev-dependencies …
    31→[package.metadata.release …
    36→[package.metadata.docs.rs …
    39→[package.metadata.playground …

src/into_either.rs
     4→use super::{Either, Left, Right};
     6→/// Provides methods for converting a type `Self` into either a [`Left`] or [`Right`]
     7→/// variant of [`Either<Self, Self>`](Either).
     8→///
     9→/// The [`into_either`](IntoEither::into_either) method takes a [`bool`] to determine
    10→/// whether to convert to [`Left`] or [`Right`].
    11→///
    12→/// The [`into_either_with`](IntoEither::into_either_with) method takes a
      →…
    14→pub trait IntoEither: Sized {

src/iterator.rs
     1→use super::{for_both, Either, Left, Right};
     2→use core::iter;
     4→macro_rules! wrap_either {
    13→/// Iterator that maps left or right iterators to corresponding `Either`-wrapped items.
    14→///
    15→/// This struct is created by the [`Either::factor_into_iter`],
    16→/// [`factor_iter`][Either::factor_iter],
    17→/// and [`factor_iter_mut`][Either::factor_iter_mut] methods.
    18→#[derive(Clone, Debug)]
    19→pub struct IterEither<L, R> {
    20→    inner: Either<L, R>,
    21→}
    24→    pub(crate) fn new(inner: Either<L, R>) -> Self {
    25→        IterEither { inner }
    26→    }
    43→impl<L, R> Iterator for Either<L, R>
    44→where
    45→    L: Iterator,
    46→    R: Iterator<Item = L::Item>,
    47→{
    48→    type Item = L::Item;
   185→    type Item = Either<L::Item, R::Item>;

src/lib.rs
    21→#[cfg(feature = "serde")]
    22→pub mod serde_untagged;
    24→#[cfg(feature = "serde")]
    25→pub mod serde_untagged_optional;
    27→use core::convert::{AsMut, AsRef};
    28→use core::fmt;
    29→use core::future::Future;
    30→use core::ops::Deref;
    31→use core::ops::DerefMut;
    32→use core::pin::Pin;
    35→use std::error::Error;
    37→use std::io::{self, BufRead, Read, Seek, SeekFrom, Write};
    39→pub use crate::Either::{Left, Right};
    41→/// The enum `Either` with variants `Left` and `Right` is a general purpose
    42→/// sum type with two cases.
    43→///
    44→/// The `Either` type is symmetric and treats its variants the same way, without
    45→/// preference.
    46→/// (For representing success or error, use the regular `Result` enum instead.)
    47→#[cfg_attr(feature = "serde", derive(serde::Serialize, serde::Deserialize))]
      →…
    49→pub enum Either<L, R> {
    50→    /// A value of type `L`.
    51→    Left(L),
    52→    /// A value of type `R`.
    53→    Right(R),
    54→}
    81→macro_rules! for_both {
   113→macro_rules! try_left {
   124→macro_rules! try_right {
   133→macro_rules! map_either {
   142→mod iterator;
   143→pub use self::iterator::IterEither;
   145→mod into_either;
   146→pub use self::into_either::IntoEither;
  1118→impl<L, R> From<Result<R, L>> for Either<L, R> {
  1128→impl<L, R> From<Either<L, R>> for Result<R, L> {
  1138→impl<L, R> Future for Either<L, R>
  1139→where
  1140→    L: Future,
  1141→    R: Future<Output = L::Output>,
  1142→{
  1143→    type Output = L::Output;
  1157→impl<L, R> Read for Either<L, R>
  1158→where
  1159→    L: Read,
  1160→    R: Read,
  1161→{
  1183→impl<L, R> Seek for Either<L, R>
  1184→where
  1185→    L: Seek,
  1186→    R: Seek,
  1187→{
  1195→impl<L, R> BufRead for Either<L, R>
  1196→where
  1197→    L: BufRead,
  1198→    R: BufRead,
  1199→{
  1221→impl<L, R> Write for Either<L, R>
  1222→where
  1223→    L: Write,
  1224→    R: Write,
  1225→{
  1253→macro_rules! impl_specific_ref_and_mut {
  1327→    type Target = L::Target;
  1348→impl<L, R> Error for Either<L, R>
  1349→where
  1350→    L: Error,
  1351→    R: Error,
  1352→{
  1522→macro_rules! check_t {
  1536→fn _unsized_ref_propagation() {
  1537→    check_t!(str);
  1538→
      →…
  1552→#[cfg(feature = "std")]
  1553→fn _unsized_std_propagation() {
  1554→    check_t!(::std::path::Path);
  1555→    check_t!(::std::ffi::OsStr);
  1556→    check_t!(::std::ffi::CStr);
  1557→}

src/serde_untagged.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    38→#[derive(serde::Serialize, serde::Deserialize)]
    39→#[serde(untagged)]
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}

src/serde_untagged_optional.rs
    36→use serde::{Deserialize, Deserializer, Serialize, Serializer};
    38→#[derive(Serialize, Deserialize)]
    39→#[serde(untagged)]
    40→enum Either<L, R> {
    41→    Left(L),
    42→    Right(R),
    43→}
