tests/snapshots/snapshots__budget_either_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (5 words)

into_either.rs
iterator.rs
lib.rs
serde_untagged.rs
serde_untagged_optional.rs
